--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     </nav>
   </header>
 <body>
-  <div id="particle-canvas" id="Top">
+  <div class="slide1 slide" id="Top">
       <img src ="imgfile/logo.png" width="700" >
    </div>
   <div class="slide2 slide" id="About">
+    <img src ="imgfile/logo.png" width="700" >
     <h1>About</h1>
     <img src ="imgfile/me.JPG" alt="a">
     <div class="container">
