--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <p>ishihara ayumu</p>
     <p>2003/08/02</p>
     <p>日々勉強。現在、夏季期間での資格取得を目指しています。</p>
+    <p>スキル:illustrator,photoshop,maya,c++ etc...</p>
   </div>
   <div class="slide3 slide" id="Work">
     <h1>Work</h1>
